@@ -1,5 +1,16 @@
 1998-08-26  Tanaka Akira      <akr@jaist.ac.jp>
 
+	* FLIM-ELS (flim-modules): Add `ew-scan-n'.
+
+	* ew-dec.el: Require 'ew-scan-n.
+
+	* ew-parse.scm: Add new token `n-body'.
+
+	* ew-var.el (ew-decode-field-syntax-alist): Add fields definition
+	`newsgroups', `path', `lines' and `xref'.
+
+1998-08-26  Tanaka Akira      <akr@jaist.ac.jp>
+
 	* ew-dec.el (ew-decode-field-test): New function.
 
 1998-08-26  Tanaka Akira      <akr@jaist.ac.jp>
